update: ``throw``되는 예외 세부화